--- a/docs/project/components/_typography.scss
+++ b/docs/project/components/_typography.scss
@@ -1,65 +1,129 @@
+/**
+ * Typography
+ * 
+ * typography styles are scoped. only 'default' type values are those provided by the normalize reset
+ * this is done to avoid repeatidly overridding
+ * see: http://css-tricks.com/opt-in-typography/  &  http://anthonyshort.me/2012/05/global-typographic-styles-suck
+ */
+
 
 /**
- * Font-Face
- * 
- * base on:
- * https://github.com/thoughtbot/bourbon/blob/master/app/assets/stylesheets/css3/_font-face.scss
+ * Main Copy Scope 
  */
-@mixin font-face($font-stack, $file-path, $weight: normal, $style: normal ) {
-  @font-face {
-      font-family: $font-stack;
-      src: url('#{$file-path}.eot');
-      src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'),
-           url('#{$file-path}.woff') format('woff'),
-           url('#{$file-path}.ttf') format('truetype'),
-           url('#{$file-path}.svg##{$font-family}') format('svg');
-      font-weight: $font-weight;
-      font-style: $font-style;
+.#{$main-type-scope} {
+
+/**
+ * Font-face & Icon Fonts
+ */
+//@include font-face();
+
+/**
+ * Headers 
+ */
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
+    color: $copy--header-text-color;                 
+    font-family: $copy--header-text;
+    // Fix the character spacing for headings
+    text-rendering: optimizelegibility;  
+  }
+
+  h1 {
+    @include adjust-font-size-to($copy--h1-size);
+    margin: 0 auto rhythm(1, $copy--h1-size);
+  }
+
+  h2 {
+    @include adjust-font-size-to($copy--h2-size);
+    margin: 0 auto rhythm(1, $copy--h2-size);
+  }
+
+  h3 {
+    @include adjust-font-size-to($copy--h3-size);
+    margin: 0 auto rhythm(1, $copy--h3-size);
+  }
+
+  h4 {
+    @include adjust-font-size-to($copy--h4-size);
+    margin: 0 auto rhythm(1, $copy--h4-size);
+  }
+
+  h5 {
+    @include adjust-font-size-to($copy--h5-size);
+    margin: 0 auto rhythm(1, $copy--h5-size);
+  }
+
+  h6 {
+    @include adjust-font-size-to($copy--h6-size);
+    margin: 0 auto rhythm(1, $copy--h6-size);
+  }
+
+  .subheader { 
+    color: $copy--subheader-text-color; 
+    font-weight: normal; 
+  }
+
+  p {
+    //margin-bottom: $base-line-height;
+    //font-family: $body-text;                           ////////does this not inherit from above??
+    margin: 0 auto rhythm(1);
+  }
+
+// use indentation rather than spacing with consequitive paragraphs. csswizardry.com/2010/12/mo-robust-paragraph-indenting/
+// p+p { text-indent: 2em; margin-top: -1.5em; }
+
+  .lead {  
+    @include adjust-font-size-to($copy--lead-size);
+    margin: 0 auto rhythm(1, $copy--lead-size);
+    color: $copy--lead-text-color;
+  }
+
+  .meta {
+    @include adjust-font-size-to($copy--meta-size, $copy--meta-line-height);
+  }
+
+  .footnote {
+    @include adjust-font-size-to($copy--footnote-size, $copy--footnote-line-height);
+  }
+
+  .muted {
+    color: $muted-color--txt;
+  }
+
+  address {
+    display: block;
+    margin-bottom: $base-line-height;
+    line-height: $base-line-height;
+    font-style: normal;
+  }
+  del {
+    color: $copy--deleted-color;
+    text-decoration: line-through;
+  }
+ 
+  cite {
+    font-style: normal;
+  }
+
+  em, 
+  dfn {
+    font-style: italic;
+  }
+  
+  dfn {
+    font-weight: bold;
+  }
+
+  ins { 
+    background: $copy--ins-bg-color; 
+    color: $copy--ins-text-color; 
+    text-decoration: none; 
+  }
+
+  /*h5bp*/
+  mark {
+  font-style: italic;
+  font-weight: bold;
   }
 }
-
-/**
- * Box Emboss
- * 
- * example:  .box{ @include box-emboss(0.8, 0.05); }
- */
-@mixin box-emboss($opacity, $opacity2){
-  box-shadow:white($opacity) 0 1px 0, inset black($opacity2) 0 1px 0;
-}
-
-/**
- * Text Emboss (letterpress)
- *
- * makes the text more readable by providing a sharper separation between letters and background
- * example: .letterpress { @include text-emboss(0.7); }
- */
-@mixin text-emboss($opacity){
-  text-shadow:white($opacity) 0 1px 0;
-}
-
-/**
- * CSS Hyphens
- * 
- * word wrapping for skinny boxes:
- * http://trentwalton.com/2011/09/07/css-hyphenation
- *
- * $value: none | manual | auto
- */
-@mixin hyphen($value) {
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-//  Compass Stich
-//  Nicer text rendering in webkit and gecko
-//  @see http://www.aestheticallyloyal.com/public/optimize-legibility/
-//  @see http://files.christophzillgens.com/webkit-font-smoothing.html
-//
-@mixin improve-text-rendering {
-  text-rendering:optimizeLegibility;
-  -webkit-font-smoothing:antialiased;
-}
-
 
